--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.15.0
 charset-normalizer==2.0.7
 cleo==0.8.1
 clikit==0.6.2
+coverage==6.1.2
 cowsay==4.0
 crashtest==0.3.1
 cryptography==35.0.0
