--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["jonthus <joona.erkkila1@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 cowsay = "^4.0"
+invoke = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
